--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,6 +33,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Javadoc build
         run: |
+          sudo chmod +x ./gradlew
           ./gradlew lib:javadoc
       - name: Setup Pages
         uses: actions/configure-pages@v5
